style.css
@charset "utf-8";
/* CSS viewport */
viewport {
	zoom:1.0;
	width:device-width;
}

/* rules to be shared regardless of resolution */
@media screen {
body {
	font-family:Baskerville, Georgia, Times, Times New Roman, serif;
	font-size:1em;
	text-align:center;
}

h1, h2, h3, h4, h5, h6 {
	font-family:Verdana, Arial, sans-serif;
}

article h1, article h2, article h3, article h4, article h5, article h6 {
	text-align:center;
}

#banner {
	background:linear-gradient(#FF0000, #990000);
	background-color:#FF0000;
	color:#FFFFFF;
	text-align:left;
}

#banner p {
	margin:0;
	padding:0;
}

/* make all link above header div white and have not underline present */		 
 #banner a:link, #banner a:visited, #banner a:active { 
 											color:#FFFFFF; 
 											text-decoration:none; 
 										} 
 										 
 /* display underline if hovering over link in space above header div */										 
 #banner a:hover, #banner a:focus { 
 				text-decoration:underline; 
 			} 
 
 
 /* make clicked link in space above header div italics */			 
 #banner a:active { 
 					font-style:italic; 
 				} 
 				 
 /* the following rules apply to regular links and share the same features as those marked with an id of top, except links are not white. */ 
 a:link { 
 			text-decoration:none; 
 		} 
 		 
 a:hover, a:focus { 
 			text-decoration:underline; 
 		} 
 		 
 a:active { 
 			font-style:italic;
			color:#FF0000; 
 		} 
 
 
 /* post content marked left on the left inside parent element */ 
 .left { 
 		float:left; 
 		clear:left; 
 	}  	 
 /* post content marked right on the right inside parent element */	 
 .right { 
 			float:right; 
 			clear:right; 
 		} 
 		 
 /* remove bullets in comments */ 
 #comments ul { 
 				list-style-type:none; 
 			} 
 #post-nav, article { 
 					clear:both; 
 				} 
 
 
 /* make comment field adjust to screen size */ 
 #comments textarea { 
 	max-width:100%; 
 	} 


div.divider {
	clear:both;
	background: linear-gradient(#999999, #C0C0C0);
	background-color:#999999;
}

article, #bar {
	text-align:left;
}

/* resize post images */ 
 article img { 
 	max-width:100%; 
 	height:auto; 
 } 
 	 
 /* format rules for pub date */	 
 .date { 
 		text-align:center; 
 	}
	
article footer {
	text-align:center;
}

/* class to hide submit button, according to Stackoverflow question about making return key submit */
.hidden-submit {
	border: 0 none;
    height: 0;
    width: 0;
    padding: 0;
    margin: 0;
    overflow: hidden
}

} /* end shared screen rules */

/* rules to be used for screen resolution under 375px */
@media screen and (max-width:374px)
{
#bar {
	width:100%;
}

/* display only nav elements in small screen */
#other {
	display:none;
}

#menu {
	float:left;
	list-style-type:none;
	margin:0;
	padding:10px 0 0 0;
}

#menu li {
		float:left;
		text-decoration:none;
		margin:0 0 0 10px;
		padding:0;
		position:relative;
	}

#menu ul {
		display:none;
		list-style-type:none;
		position:absolute;
		top:100%;
		left:0;
		background:#FFFFFF;
		padding:0;
}

#menu ul li {
		float:none;
		margin-top:20px;
}

#menu li:hover > ul, #menu li:focus > ul, #menu li:active > ul {
		display:block;
}

#menu > li {
	font-family:Verdana, Arial, sans-serif;
	font-weight:bold;
}

#menu > li li {
	font-family:Baskerville, Georgia, Times, Times New Roman, serif;
	font-weight:normal;
}

#searchform {
	float:right;
	margin:0;
	padding:0;
	max-width:50%;
}

#search {
	margin-top:5px;
	padding-top:5px;
}

#search input {
	max-width:100%;
}

#bar, main {
	clear:both;
}
} /* end rules for resolutions below 375px */

/* rules to be used for screen resolution less than or equal to 980px */
@media screen and  (min-width:375px) and (max-width:980px)
{
#bar {
	width:100%;
}

#other {
	display:none;
}

#menu {
	float:left;
	list-style-type:none;
	margin:0;
	padding:10px 0 0 0;
}

#menu li {
		float:left;
		text-decoration:none;
		margin:0 0 0 20px;
		padding:0;
		position:relative;
	}

#menu ul {
		display:none;
		list-style-type:none;
		position:absolute;
		top:100%;
		left:0;
		background:#FFFFFF;
		padding:0;
}

#menu ul li {
		float:none;
		margin-top:20px;
}

#menu li:hover > ul, #menu li:focus > ul, #menu li:active > ul {
		display:block;
}

#menu > li {
	font-family:Verdana, Arial, sans-serif;
	font-weight:bold;
}

#menu > li li {
	font-family:Baskerville, Georgia, Times, Times New Roman, serif;
	font-weight:normal;
}

#searchform {
	float:right;
	margin:0;
	padding:0;
	max-width:100%;
}

#search {
	margin-top:5px;
	padding-top:5px;
}

#search input {
	max-width:100%;
}

#bar, main {
	clear:both;
}
} /* end rules for resolutions below 980px */

/* rules for large resolutions */
@media screen and (min-width:981px)
{
	body {
		background-color:#000000;
	}
	#wrapper {
		padding-left:auto;
		margin-left:auto;
		padding-right:auto;
		margin-right:auto;
		width:90%;
		background-color:#FFFFFF;
	}
	
	main {
		float:left;
		clear:left;
		width:75%;
	}
	
	#bar {
		float:right;
		clear:right;
		width:25%;
	}
	
	.arrow {
		display:none;
	}
	
	#menu {
		list-style-type:none;
		margin:0;
		padding:0;
	}
	
	#menu li {
		list-style-type:none;
		margin:20px 0 20px 0;
		padding:20px 0 20px 0;
	}
	
	#menu > li {
		font-family:Verdana, Arial, sans-serif;
		text-align:center;
		font-weight:bold;
	}
	
	#menu > li li {
		font-family:Baskerville, Georgia, Times, Times New Roman, serif;
		font-weight:normal;
	}
	
	#search {
		text-align:right;
	}
	
	#search input {
		max-width:100%;
	}
	
} /* end rules for large screens */

/* print rules */
@media print {
	#banner {
		display:none;
	}
	
	div.divider {
		display:none;
	}
	
	#post-nav {
		display:none;
	}
	
	/* display link addresses on print, which may be ignored in some browsers. Does not work too well for internal links. */ 
 article a:link:after, article a:visited:after { 
 										display:inline-block; 
 										margin-left:5px; 
 										font-style:normal; 
 										content: " (" attr(href) ")"; 
 									}
									
									article header a:link:after, article header a:visited:after { 
 										content:normal;
 									}
									
									
a:link, a:visited {
	font-weight:bold;
	color:#520;
}
 									 
 /* display abbreviation and acronym meanings on printed page, if page uses the respective abbr and acronym tags. */ 
 abbr:after, acronym:after { 
 	content: " (" attr(title) ")"; 
 } 

	
	main {
		width:100%;
	}
	
	#bar {
		display:none;
		float:right;
		clear:right;
		width:25%;
	}
	
	.arrow {
		display:none;
	}
	
	#menu {
		list-style-type:none;
		margin:0;
		padding:0;
	}
	
	#menu li {
		list-style-type:none;
		margin:20px 0 20px 0;
		padding:20px 0 20px 0;
	}
	
	#menu > li {
		font-family:Verdana, Arial, sans-serif;
		text-align:center;
		font-weight:bold;
	}
	
	#menu > li li {
		font-family:Baskerville, Georgia, Times, Times New Roman, serif;
		text-align:left;
		font-weight:normal;
	}
	
	#search {
		text-align:right;
	}
	
	#search input {
		max-width:100%;
	}
	
	footer {
		display:none;
	}
	
	.socialink, #comments {
		display:none;
	}
} /* end print rules */

